Fix attributes spans no wrapping

--- a/src/components/FullInfo/FullInfo.module.scss
+++ b/src/components/FullInfo/FullInfo.module.scss
@@ -21,4 +21,5 @@
 .author,
 .licenses {
   white-space: nowrap;
+  float: left;
 }
